Skip to content

[3.0.x] Deprecation warnings with taglib 2.1.1

From a recent build of 3.0.22-rc1 with taglib 2.1.1:

meta_engine/taglib.cpp: In instantiation of ‘TagLib::File* VLCTagLib::ExtResolver<T>::createFileFromStream(TagLib::IOStream*, bool, TagLib::AudioProperties::ReadStyle) const [with T = TagLib::MPEG::File]’:
meta_engine/taglib.cpp:162:7:   required from here
  162 | File* VLCTagLib::ExtResolver<T>::createFileFromStream(IOStream* s, bool, AudioProperties::ReadStyle) const
      |       ^~~~~~~~~
meta_engine/taglib.cpp:176:20: warning: ‘TagLib::MPEG::File::File(TagLib::IOStream*, TagLib::ID3v2::FrameFactory*, bool, TagLib::AudioProperties::ReadStyle)’ is deprecated [-Wdeprecated-declarations]
  176 |             return new T(s, ID3v2::FrameFactory::instance(), false, AudioProperties::Fast);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from meta_engine/taglib.cpp:81:
/usr/include/taglib/mpegfile.h:140:7: note: declared here
  140 |       File(IOStream *stream, ID3v2::FrameFactory *frameFactory,
      |       ^~~~
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information