taglib: use non-deprecated File constructor

The deprecated info was added in 1.5 [^1]. But the constructor was added in 2.0 [^2].
The parameters are the same, in a different order and the factory is optional.

Fixes #29391

[^1]: https://github.com/taglib/taglib/commit/4879eb8e6e6bf46b89a4a67f62cada82478bade5
[^2]: https://github.com/taglib/taglib/commit/56fa36934e5633122fcbf305d98f2111caeb5315

(cherry picked from commit 98f4a840ec6a8be5d2db735598724652dcdecb6b)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>